...

  const handleOpenDeveloperSettings = useCallback(() => {
    Linking.openURL(INTERVALS_URLS.developerSettings);
  }, []);

  return (
    <ScreenSafeAreaView style={shared.container} testID="login-screen">
      <ScrollView contentContainerStyle={styles.scrollContent} keyboardShouldPersistTaps="handled">
        <LanguagePicker />

        {/* Logo/Header */}
        <View style={styles.header}>
          <Text style={[styles.title, isDark && styles.textLight]}>{t('login.title')}</Text>
...
